--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "cross-env",
-  "version": "0.0.0-semantically-released",
+  "name": "cross-env-os",
+  "version": "7.1.0",
   "description": "Run scripts that set and use environment variables across platforms",
   "main": "src/index.js",
   "bin": {
-    "cross-env": "src/bin/cross-env.js",
-    "cross-env-shell": "src/bin/cross-env-shell.js"
+    "cross-env-os": "src/bin/cross-env.js",
+    "cross-env-shell-os": "src/bin/cross-env-shell.js"
   },
   "engines": {
     "node": ">=10.14",
